<resources>
    <!-- URL's-->
    <string name="URL">http://10.0.2.2:8080</string>

    <string name="URL_login">/login</string>
    <string name="URL_register">/register</string>

    <string name="URL_shift">/shift</string>
    <string name="URL_shift_askfree">/shift/askfree</string>
    <string name="URL_shift_takeover">/shift/takeover</string>
    <string name="URL_shift_cancelRequest">/shift/cancelRequest</string>
    <string name="URL_shift_open">/shift/open</string>

    <string name="URL_profile">/profile</string>
    <string name="URL_user">/user</string>
    <string name="URL_user_password">/user/password</string>
    <string name="URL_user_email">/user/email</string>
    <string name="URL_user_phone">/user/phone</string>
    <string name="URL_user_picture">/user/picture</string>


    <string name="app_name">Workr</string>
    <string name="title_overview">Overview</string>
    <string name="title_openshifts">Open Shifts</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="profilepicture">profilepicture</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_dashboard">dashboardActivity</string>
    <string name="preference_file_key">myAppPreference</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="workr">WORKR</string>
    <string name="thumbnail">thumbnail</string>
    <string name="name">Name</string>
    <string name="workerType">WorkerType</string>
    <string name="notifications">  NOTIFICATIONS</string>
    <string name="open_shift_alerts">Open Shift Alerts</string>
    <string name="unfilled_shift_alerts">Unfilled Shift Alerts</string>
    <string name="change_email">CHANGE EMAIL</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="email_alerts">Email Alerts</string>
    <string name="todo">TODO</string>
    <string name="change_phonenumber">CHANGE PHONENUMBER</string>
</resources>
