<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_white_frame"
        android:layout_width="365dp"
        android:layout_height="537dp"
        android:layout_marginTop="124dp"
        android:background="@drawable/round_outline"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/activity_profile_image"
            android:layout_width="139dp"
            android:layout_height="133dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            android:rotation="90"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@android:drawable/sym_def_app_icon" />

        <TextView
            android:id="@+id/activity_profile_textView_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/name"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_profile_image" />

        <TextView
            android:id="@+id/profile_textView_notifications"
            android:layout_width="207dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:text="@string/notifications"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_profile_textView_email" />

        <Switch
            android:id="@+id/profile_switch_openShiftsAlerts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.251"
            app:layout_constraintStart_toEndOf="@+id/profile_textView_openShiftsAlerts"
            app:layout_constraintTop_toBottomOf="@+id/profile_textView_notifications" />

        <Switch
            android:id="@+id/profile_switch_emailAlerts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toEndOf="@+id/profile_textView_emailAlerts"
            app:layout_constraintTop_toBottomOf="@+id/profile_switch_unfilledShiftAlerts" />

        <Switch
            android:id="@+id/profile_switch_unfilledShiftAlerts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.131"
            app:layout_constraintStart_toEndOf="@+id/profile_textView_unfilledShiftAlerts"
            app:layout_constraintTop_toBottomOf="@+id/profile_switch_openShiftsAlerts" />

        <Button
            android:id="@+id/profile_button_changeEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_round_corner"
            android:padding="10dp"
            android:text="@string/change_email"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toStartOf="@+id/profile_button_changePassword"
            app:layout_constraintHorizontal_bias="0.79"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_switch_emailAlerts" />

        <Button
            android:id="@+id/profile_button_changePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_round_corner"
            android:padding="10dp"
            android:text="@string/change_password"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profile_button_changeEmail"
            app:layout_constraintTop_toBottomOf="@+id/profile_switch_emailAlerts" />

        <TextView
            android:id="@+id/profile_textView_openShiftsAlerts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="114dp"
            android:layout_marginTop="20dp"
            android:text="@string/open_shift_alerts"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_textView_notifications" />

        <TextView
            android:id="@+id/profile_textView_unfilledShiftAlerts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="114dp"
            android:layout_marginTop="18dp"
            android:text="@string/unfilled_shift_alerts"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_textView_openShiftsAlerts" />

        <TextView
            android:id="@+id/profile_textView_emailAlerts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="114dp"
            android:layout_marginTop="18dp"
            android:text="@string/email_alerts"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_textView_unfilledShiftAlerts" />

        <TextView
            android:id="@+id/activity_profile_textView_phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@android:string/emptyPhoneNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_profile_textView_name" />

        <TextView
            android:id="@+id/activity_profile_textView_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_profile_textView_phoneNumber" />

        <Button
            android:id="@+id/profile_button_changePhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_round_corner"
            android:padding="10dp"
            android:text="@string/change_phonenumber"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_button_changeEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>